2006-12-08 Tim
 PATCH: [ 1610448 ] Manual: Requirements section and layout changes for Plugins
  Manual: Plugins.xml

2006-12-05 Kimmo
 PATCH: [ 1608705 ] Manual: Fix indexterms in Folder Compare
  Manual: Compare_dirs.xml
 PATCH: [ 1608708 ] Manual: Fix indexterms in File Compare
  Manual: Compare_files.xml

2006-12-04 Kimmo
 PATCH: [ 1608003 ] Manual: Fix indexterm position in Quick Start
  Manual: Introduction.xml
 PATCH: [ 1608150 ] Manual: Fix indexterm position in Introduction
  Manual: Quick_start.xml

2006-12-03 Kimmo
 PATCH: [ 1607084 ] Manual: Add new FAQ about missing runtime files
  Manual: Faq.xml

2006-12-01 Kimmo
 PATCH: [ 1605562 ] Manual: Add FAQ items about archive support installation
  Manual: Faq.xml

2006-11-30 Tim
 PATCH: [ 1605673 ] Manual: Minimal changes in Filters.xml
  Manual: Filters.xml

2006-11-29 Tim
 PATCH: [ 1604059 ] Manual: Add missing options to Configuration.xml
  Manual: Configuration.xml

2006-11-27 Kimmo
 PATCH: [ 1603359 ] Manual: FAQ updates
  Manual: Faq.xml
 PATCH: [ 1603385 ] Manual: fix filter file path, clarify template file usage
  Manual: Filters.xml
 PATCH: [ 1603393 ] Improve project file documentation
  Manual: Open_paths.xml
  Manual/screenshots new file: projfile_save.png

2006-11-26 Kimmo
 PATCH: [ 1602658 ] Manual: note about some 7-zip MSI installers missing file
  Manual: Install.xml

2006-11-26 Tim
 PATCH: [ 1602517 ] Manual: Remove "10.3.2. Apply to unrecognized side"
  Manual: Configuration.xml

2006-11-23 Kimmo
 PATCH: [ 1601440 ] Manual: improve command line options chapter
  Manual: Command_line.xml

2006-11-22 Kimmo
 PATCH: [ 1600651 ] Manual: clarify folder filter rules about starting mark
  Manual: Filters.xml
 PATCH: [ 1600658 ] Manual: Add minimize commandline parameter
  Manual: Command_line.xml

2006-11-21 Tim
 PATCH: [ 1398013 ] Add availability of binary viewing/merging to FAQ
  Manual: Faq.xml
 Move "filecomp1.png" screenshot after the first paragraph. This looks better and more consistent.