@@ -1,3 +1,7 @@
+2006-12-11 Tim
+ PATCH: [ 1611595 ] Manual: Merge Plugins.xml with readme_users.txt
+  Manual: Plugins.xml
+
 2006-12-08 Tim
  PATCH: [ 1610448 ] Manual: Requirements section and layout changes for Plugins
   Manual: Plugins.xml
